# FastAPI-Healthcare-Scheduler

./: .gitignore  README.md  deploy-heroku.sh  main.py  pyproject.toml  requirements.txt  run.sh
api/: medical.py  patients.py  resources.py  scheduling.py
database/: database.py  models.py  seed.py
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: apiClient.ts  testApi.ts
frontend/src/components/: ApiTest.css  ApiTest.tsx  Button.tsx  Card.tsx  FormGroup.tsx  Input.tsx  Select.tsx
frontend/src/pages/: Appointments.tsx  Home.tsx  PatientDetail.tsx  Patients.tsx  Scheduling.tsx
models/: medical.py  patient.py  scheduling.py
services/: scheduler.py
utils/: data_generator.py
