[project]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = [
    {name = "AJ Javadi",email = "amirjavadi25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "faker (>=19.3.1,<20.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9.9)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
